@@ -1,5 +1,10 @@
 2005-10-11  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_add_logs_from_names): Try to open the main
+	window as soon as possible.
+
+2005-10-11  Vincent Noel  <vnoel@cox.net>
+
 	* info.c (RepaintLogInfo): Make sure the number of lines displayed
 	in the properties window is the same in the status bar.
 
